--- a/servicii/masaj-de-relaxare/index.html
+++ b/servicii/masaj-de-relaxare/index.html
@@ -379,7 +379,7 @@
                 viewBox="0 0 12 12"
                 style="enable-background: new 0 0 512 512"
                 xml:space="preserve"
-                class="icon-menu icon-menu-secondary d-xl-none"
+                class="icon-menu d-xl-none"
               >
                 <g>
                   <path
