--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     <meta http-equiv="Cache-Control" content="max-age=31536000, must-revalidate" />
 
     <!-- SEO -->
-    <title>Salon de masaj Miercurea Ciuc</title>
+    <title>Salon de masaj Brasov</title>
 
-    <meta name="description" content="Salon de masaj în Miercurea Ciuc |" />
+    <meta name="description" content="Salon de masaj Brasov" />
 
     <!-- Author -->
     <meta name="author" content="https://websiteshop.ro" />
 
     <!-- Open Graph (Facebook, WhatsApp etc.) -->
-    <meta property="og:title" content="Cabinet stomatologic în Miercurea Ciuc |" />
+    <meta property="og:title" content="Salon de masaj Brasov" />
 
-    <meta property="og:description" content="Cabinet stomatologic în Miercurea Ciuc |" />
+    <meta property="og:description" content="Salon de masaj Brasov" />
 
     <meta property="og:type" content="website" />
 
@@ -30,9 +30,9 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
 
-    <meta name="twitter:title" content="Stație ITP Brașov | autoturisme, autoutilitare și motociclete" />
+    <meta name="twitter:title" content="Salon de masaj Brasov" />
 
-    <meta name="twitter:description" content="Stație ITP Brașov – ITP rapid pentru autoturisme, autoutilitare și motociclete. Programare ușoară și verificare profesionistă." />
+    <meta name="twitter:description" content="Salon de masaj Brasov" />
 
     <meta name="twitter:image" content="https://websitetest.ro/cabinet-stomatologic-miercurea-ciuc/img/img-preview.jpg" />
 
@@ -543,7 +543,7 @@
                 <h2 class="text-white">Servicii și tarife <span class="text-white mbot-10">salon de masaj Brașov</span></h2>
                 <img src="icons/icon section salon de masaj.svg" alt="icon section salon de masaj brasov" class="icon-section mbot-20" />
                 <p class="text-white offset-x1neg offsetX">
-                  Îți oferim masaj terapeutic în Miercurea Ciuc realizat de terapeuți certificați, într-un spațiu creat pentru relaxare și vindecare. Fie că îți dorești reducerea durerilor musculare,
+                  Îți oferim masaj terapeutic în Brasov realizat de terapeuți certificați, într-un spațiu creat pentru relaxare și vindecare. Fie că îți dorești reducerea durerilor musculare,
                   recuperare după efort sau pur și simplu un moment de liniște, serviciile noastre sunt personalizate pentru nevoile tale.
                 </p>
               </div>
@@ -843,7 +843,7 @@
                 </p>
               </div>
               <div class="card-faq p-1 offset-x1neg offsetX">
-                <p class="text-question-faq fs-13 fw-600 text-secondary" style="text-transform: uppercase">6. Cum mă programez pentru o ședință de masaj terapeutic în Miercurea Ciuc?</p>
+                <p class="text-question-faq fs-13 fw-600 text-secondary" style="text-transform: uppercase">6. Cum mă programez pentru o ședință de masaj terapeutic în Brasov?</p>
                 <p class="text-answer-faq fs-15 fw-500 text-primary mtop-10" style="display: none">
                   Ne poți contacta telefonic, pe WhatsApp sau prin formularul de pe site. Recomandăm programarea din timp pentru a-ți asigura locul la ora dorită.
                 </p>
@@ -874,7 +874,7 @@
           <img src="icons/icon section salon de masaj.svg" alt="icon section salon de masaj brasov" class="icon-section" />
         </div>
         <div class="row mbot-40 offset-x1neg offsetX">
-          <p>Experiențele reale vorbesc de la sine. Cei care au ales serviciile noastre de masaj terapeutic în Miercurea Ciuc s-au bucurat de relaxare, recuperare și o stare de bine care durează.</p>
+          <p>Experiențele reale vorbesc de la sine. Cei care au ales serviciile noastre de masaj terapeutic în Brasov s-au bucurat de relaxare, recuperare și o stare de bine care durează.</p>
         </div>
         <div class="row g-5 mbot-40">
           <div class="col-lg-6 d-flex justify-content-center">
