--- a/servicii/masaj-de-relaxare/index.html
+++ b/servicii/masaj-de-relaxare/index.html
@@ -9,17 +9,17 @@
     <meta http-equiv="Cache-Control" content="max-age=31536000, must-revalidate" />
 
     <!-- SEO -->
-    <title>Masaj de relaxare Miercurea Ciuc</title>
+    <title>Masaj de relaxare Brasov</title>
 
-    <meta name="description" content="Masaj de relaxare în Miercurea Ciuc |" />
+    <meta name="description" content="Masaj de relaxare Brasov" />
 
     <!-- Author -->
     <meta name="author" content="https://websiteshop.ro" />
 
     <!-- Open Graph (Facebook, WhatsApp etc.) -->
-    <meta property="og:title" content="Cabinet stomatologic în Miercurea Ciuc |" />
+    <meta property="og:title" content="Masaj de relaxare Brasov" />
 
-    <meta property="og:description" content="Cabinet stomatologic în Miercurea Ciuc |" />
+    <meta property="og:description" content="Masaj de relaxare Brasov" />
 
     <meta property="og:type" content="website" />
 
@@ -30,9 +30,9 @@
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image" />
 
-    <meta name="twitter:title" content="Stație ITP Brașov | autoturisme, autoutilitare și motociclete" />
+    <meta name="twitter:title" content="Masaj de relaxare Brasov" />
 
-    <meta name="twitter:description" content="Stație ITP Brașov – ITP rapid pentru autoturisme, autoutilitare și motociclete. Programare ușoară și verificare profesionistă." />
+    <meta name="twitter:description" content="Masaj de relaxare Brasov" />
 
     <meta name="twitter:image" content="https://websitetest.ro/cabinet-stomatologic-miercurea-ciuc/img/img-preview.jpg" />
 
@@ -617,7 +617,7 @@
                 </p>
               </div>
               <div class="card-faq p-1 offset-x1neg offsetX">
-                <p class="text-question-faq fs-13 fw-600 text-secondary" style="text-transform: uppercase">6. Cum mă programez pentru o ședință de masaj terapeutic în Miercurea Ciuc?</p>
+                <p class="text-question-faq fs-13 fw-600 text-secondary" style="text-transform: uppercase">6. Cum mă programez pentru o ședință de masaj terapeutic în Brasov?</p>
                 <p class="text-answer-faq fs-15 fw-500 text-primary mtop-10" style="display: none">
                   Ne poți contacta telefonic, pe WhatsApp sau prin formularul de pe site. Recomandăm programarea din timp pentru a-ți asigura locul la ora dorită.
                 </p>
