--- a/servicii/masaj-de-relaxare/index.html
+++ b/servicii/masaj-de-relaxare/index.html
@@ -47,7 +47,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Great+Vibes&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300..700;1,300..700&family=Mulish:ital,wght@0,200..1000;1,200..1000&family=Philosopher:ital,wght@0,400;0,700;1,400;1,700&family=Raleway:ital,wght@0,100..900;1,100..900&display=swap"
       rel="stylesheet"
     />
 
@@ -198,7 +198,7 @@
                       d="m30.035 22.6c-.082-.065-6.035-4.356-7.669-4.048-.78.138-1.226.67-2.121 1.735-.144.172-.49.584-.759.877a12.517 12.517 0 0 1 -1.651-.672 13.7 13.7 0 0 1 -6.321-6.321 12.458 12.458 0 0 1 -.672-1.651c.294-.27.706-.616.882-.764 1.06-.89 1.593-1.336 1.731-2.118.283-1.62-4.005-7.614-4.05-7.668a2.289 2.289 0 0 0 -1.705-.97c-1.738 0-6.7 6.437-6.7 7.521 0 .063.091 6.467 7.988 14.5 8.025 7.888 14.428 7.979 14.491 7.979 1.085 0 7.521-4.962 7.521-6.7a2.283 2.283 0 0 0 -.965-1.7z"
                     />
                   </svg>
-                  <p class="ff-secondary fs-16 fw-500 text-primary">0749 406 638</p>
+                  <p class="ff-secondary fs-20 fw-500 text-primary">0749 406 638</p>
                 </div>
               </div>
               <div class="col-12 col-lg-3 d-flex justify-content-lg-center">
@@ -211,7 +211,7 @@
                       d="m20.05 148.858 209.803 139.874c7.942 5.295 17.044 7.942 26.146 7.942 9.103 0 18.206-2.648 26.148-7.942l209.803-139.874c12.555-8.365 20.05-22.365 20.05-37.475 0-25.981-21.137-47.117-47.117-47.117h-417.766c-25.98.001-47.117 21.137-47.117 47.142 0 15.085 7.496 29.085 20.05 37.45z"
                     />
                   </svg>
-                  <p class="ff-secondary fs-16 fw-500 text-primary">contact@websiteshop.ro</p>
+                  <p class="ff-secondary fs-20 fw-500 text-primary">contact@websiteshop.ro</p>
                 </div>
               </div>
               <div class="col-12 col-lg-3 d-flex justify-content-lg-center">
@@ -234,7 +234,7 @@
                       d="m267.363281 386.117188c5.070313-5.820313 124.160157-143.578126 124.160157-238.273438 0-195.265625-271.046876-197.648438-271.046876 0 0 94.695312 119.089844 232.453125 124.160157 238.273438 6.003906 6.886718 16.734375 6.878906 22.726562 0zm-56.539062-250.292969c0-24.859375 20.265625-45.082031 45.175781-45.082031 24.90625 0 45.171875 20.222656 45.171875 45.082031 0 24.855469-20.265625 45.078125-45.171875 45.078125-24.910156 0-45.175781-20.222656-45.175781-45.078125zm0 0"
                     />
                   </svg>
-                  <p class="ff-secondary fs-16 fw-500 text-primary">Piața Libertății, nr. 9</p>
+                  <p class="ff-secondary fs-20 fw-500 text-primary">Piața Libertății, nr. 9</p>
                 </div>
               </div>
               <div class="col-12 col-lg-3 d-flex justify-content-lg-center">
@@ -246,7 +246,7 @@
                       />
                     </g>
                   </svg>
-                  <p class="ff-secondary fs-16 fw-500 text-primary">L - V : 09:00 - 18:00</p>
+                  <p class="ff-secondary fs-20 fw-500 text-primary">L - V : 09:00 - 18:00</p>
                 </div>
               </div>
             </div>
@@ -339,11 +339,11 @@
         </nav>
         <nav class="breadcrumbs bg-secondary translateXneg">
           <div class="container d-flex align-items-center">
-            <a class="fs-15 fw-600 text-white" href="../../index.html">Acasă</a>
+            <a class="fs-18 fw-600 text-white" href="../../index.html">Acasă</a>
             <span style="color: white; padding: 0px 5px">&raquo;</span>
-            <a class="fs-15 fw-600 text-white" href="../../index.html#section-services">Servicii</a>
+            <a class="fs-18 fw-600 text-white" href="../../index.html#section-services">Servicii</a>
             <span style="color: white; padding: 0px 5px">&raquo;</span>
-            <span class="fs-14 fw-400 span-page text-white">Masaj de relaxare</span>
+            <span class="fs-18 fw-400 span-page text-white">Masaj de relaxare</span>
           </div>
         </nav>
       </div>
@@ -393,11 +393,11 @@
           </nav>
           <nav class="breadcrumbs bg-secondary translateXneg">
             <div class="container d-flex align-items-center">
-              <a class="fs-15 fw-600 text-white" href="../../index.html">Acasă</a>
+              <a class="fs-18 fw-600 text-white" href="../../index.html">Acasă</a>
               <span style="color: white; padding: 0px 5px">&raquo;</span>
-              <a class="fs-15 fw-600 text-white" href="../../index.html#section-services">Servicii</a>
+              <a class="fs-18 fw-600 text-white" href="../../index.html#section-services">Servicii</a>
               <span style="color: white; padding: 0px 5px">&raquo;</span>
-              <span class="fs-14 fw-400 text-white span-page">Masaj de relaxare</span>
+              <span class="fs-18 fw-600 text-white span-page">Masaj de relaxare</span>
             </div>
           </nav>
         </div>
@@ -441,7 +441,7 @@
                   />
                 </g>
               </svg>
-              <p class="ff-secondary fs-18 fw-700 text-primary mbot-10">Terapie personalizată</p>
+              <p class="ff-secondary fs-20 fw-700 text-primary mbot-10">Terapie personalizată</p>
               <p class="fs-16 text-primary">Fiecare ședință de masaj este adaptată nevoilor și obiectivelor tale (relaxare, recuperare, reducerea durerii).</p>
             </div>
           </div>
@@ -454,7 +454,7 @@
                   fill-rule="evenodd"
                 />
               </svg>
-              <p class="ff-secondary fs-18 fw-700 text-primary mbot-10">Atmosferă liniștită și prietenoasă</p>
+              <p class="ff-secondary fs-20 fw-700 text-primary mbot-10">Atmosferă liniștită și prietenoasă</p>
               <p class="fs-16 fw-500 text-primary">Un spațiu creat pentru relaxare profundă, unde te deconectezi complet de stresul zilnic.</p>
             </div>
           </div>
@@ -478,7 +478,7 @@
                   />
                 </g>
               </svg>
-              <p class="ff-secondary fs-18 fw-700 text-primary mbot-10">Experiență și profesionalism</p>
+              <p class="ff-secondary fs-20 fw-700 text-primary mbot-10">Experiență și profesionalism</p>
               <p class="fs-16 fw-500 text-primary">Terapeuți certificați, cu pregătire și grijă reală pentru sănătatea ta.</p>
             </div>
           </div>
@@ -659,8 +659,8 @@
                       />
                     </svg>
                     <div class="d-flex flex-column align-items-start">
-                      <p class="fs-17 fw-700 ff-secondary text-white">Telefon</p>
-                      <p class="ff-secondary fs-16 fw-500 text-white">0749 406 638</p>
+                      <p class="fs-20 fw-700 ff-secondary text-white">Telefon</p>
+                      <p class="ff-secondary fs-20 fw-500 text-white">0749 406 638</p>
                     </div>
                   </div>
                 </div>
@@ -675,8 +675,8 @@
                       />
                     </svg>
                     <div class="d-flex flex-column align-items-start">
-                      <p class="fs-17 fw-700 ff-secondary text-white">E-mail</p>
-                      <p class="ff-secondary fs-16 fw-500 text-white">contact@websiteshop.ro</p>
+                      <p class="fs-20 fw-700 ff-secondary text-white">E-mail</p>
+                      <p class="ff-secondary fs-20 fw-500 text-white">contact@websiteshop.ro</p>
                     </div>
                   </div>
                 </div>
@@ -701,8 +701,8 @@
                       />
                     </svg>
                     <div class="d-flex flex-column align-items-start">
-                      <p class="fs-17 fw-700 ff-secondary text-white">Adresă</p>
-                      <p class="ff-secondary fs-16 fw-500 text-white">Str. Mihai Agache nr.10, Brasov</p>
+                      <p class="fs-20 fw-700 ff-secondary text-white">Adresă</p>
+                      <p class="ff-secondary fs-20 fw-500 text-white">Str. Mihai Agache nr.10, Brasov</p>
                     </div>
                   </div>
                 </div>
@@ -716,8 +716,8 @@
                       </g>
                     </svg>
                     <div class="d-flex flex-column align-items-start">
-                      <p class="fs-17 fw-700 ff-secondary text-white">Telefon</p>
-                      <p class="ff-secondary fs-16 fw-500 text-white">0749 406 638</p>
+                      <p class="fs-20 fw-700 ff-secondary text-white">Telefon</p>
+                      <p class="ff-secondary fs-20 fw-500 text-white">0749 406 638</p>
                     </div>
                   </div>
                 </div>
@@ -747,7 +747,7 @@
                   d="m23.685.139c-.23-.163-.532-.185-.782-.054l-22.5 11.75c-.266.139-.423.423-.401.722.023.3.222.556.505.653l6.255 2.138 13.321-11.39-10.308 12.419 10.483 3.583c.078.026.16.04.242.04.136 0 .271-.037.39-.109.19-.116.319-.311.352-.53l2.75-18.5c.041-.28-.077-.558-.307-.722z"
                 />
               </svg>
-              <h4 class="ff-secondary form-title text-primary mbot-30">Formular de contact</h4>
+              <h4 class="ff-secondary form-title fs-20 text-primary mbot-30">Formular de contact</h4>
               <p class="text-red"></p>
               <div class="d-flex flex-column mbot-20">
                 <label class="form-label text-primary" for="form-name">Numele dumneavoastră</label>
