--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@
                 </div>
                 <div class="row mbot-20" style="width: 100%">
                   <div class="col-12 col-lg-6 d-flex justify-content-center align-items-center offset-x1neg offsetX">
-                    <p class="ff-secondary fs-16 fw-600 text-white" style="text-transform: uppercase">Masaj de recuperare</p>
+                    <p class="ff-secondary fs-20 fw-600 text-white" style="text-transform: uppercase">Masaj de recuperare</p>
                   </div>
                   <div class="col-12 col-lg-6 d-flex justify-content-center align-items-center offset-x1pos offsetX">
                     <p class="text-white fs-16 fw-400">100 lei - 60 minute / <span class="d-block d-lg-inline">130 lei - 90 minute</span></p>
@@ -770,7 +770,7 @@
                 </div>
                 <div class="row mbot-20" style="width: 100%">
                   <div class="col-12 col-lg-6 d-flex justify-content-center align-items-center offset-x1neg offsetX">
-                    <p class="ff-secondary fs-16 fw-600 text-white" style="text-transform: uppercase">Masaj de recuperare</p>
+                    <p class="ff-secondary fs-20 fw-600 text-white" style="text-transform: uppercase">Masaj de recuperare</p>
                   </div>
                   <div class="col-12 col-lg-6 d-flex justify-content-center align-items-center offset-x1pos offsetX">
                     <p class="text-white fs-16 fw-400">100 lei - 60 minute / <span class="d-block d-lg-inline">130 lei - 90 minute</span></p>
@@ -778,7 +778,7 @@
                 </div>
                 <div class="row" style="width: 100%">
                   <div class="col-12 col-lg-6 d-flex justify-content-center align-items-center offset-x1neg offsetX">
-                    <p class="ff-secondary fs-16 fw-600 text-white" style="text-transform: uppercase">Masaj de recuperare</p>
+                    <p class="ff-secondary fs-20 fw-600 text-white" style="text-transform: uppercase">Masaj de recuperare</p>
                   </div>
                   <div class="col-12 col-lg-6 d-flex justify-content-center align-items-center offset-x1pos offsetX">
                     <p class="text-white fs-16 fw-400">100 lei - 60 minute / <span class="d-block d-lg-inline">130 lei - 90 minute</span></p>
@@ -1002,8 +1002,8 @@
                       </g>
                     </svg>
                     <div class="d-flex flex-column align-items-start">
-                      <p class="fs-20 fw-700 ff-secondary text-white">Telefon</p>
-                      <p class="ff-secondary fs-20 fw-500 text-white">0749 406 638</p>
+                      <p class="fs-20 fw-700 ff-secondary text-white">Program</p>
+                      <p class="ff-secondary fs-20 fw-500 text-white">L - V : 09:00 - 18:00</p>
                     </div>
                   </div>
                 </div>
@@ -1033,7 +1033,7 @@
                   d="m23.685.139c-.23-.163-.532-.185-.782-.054l-22.5 11.75c-.266.139-.423.423-.401.722.023.3.222.556.505.653l6.255 2.138 13.321-11.39-10.308 12.419 10.483 3.583c.078.026.16.04.242.04.136 0 .271-.037.39-.109.19-.116.319-.311.352-.53l2.75-18.5c.041-.28-.077-.558-.307-.722z"
                 />
               </svg>
-              <h4 class="ff-secondary form-title fs-20 text-primary mbot-30">Formular de contact</h4>
+              <h4 class="ff-secondary form-title ff-20 text-primary mbot-30">Formular de contact</h4>
               <p class="text-red"></p>
               <div class="d-flex flex-column mbot-20">
                 <label class="form-label text-primary" for="form-name">Numele dumneavoastră</label>
