--- a/servicii/masaj-de-relaxare/index.html
+++ b/servicii/masaj-de-relaxare/index.html
@@ -716,8 +716,8 @@
                       </g>
                     </svg>
                     <div class="d-flex flex-column align-items-start">
-                      <p class="fs-20 fw-700 ff-secondary text-white">Telefon</p>
-                      <p class="ff-secondary fs-20 fw-500 text-white">0749 406 638</p>
+                      <p class="fs-20 fw-700 ff-secondary text-white">Program</p>
+                      <p class="ff-secondary fs-20 fw-500 text-white">L - V : 09:00 - 18:00</p>
                     </div>
                   </div>
                 </div>
