--- a/index.html
+++ b/index.html
@@ -1061,7 +1061,7 @@
         </div>
       </div>
     </section>
-    <footer class="bg-white py-4">
+    <footer class="py-4">
       <div class="container">
         <div class="row d-flex justify-content-center mbot-30">
           <a href="#home" class="logo-footer">
